--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,2 @@
-torch>=1.9.0
-torchvision>=0.10.0
-psutil>=5.8.0
-pandas>=1.3.0
-numpy>=1.19.0
+pip install torch==2.3.1+cu121 torchvision==0.18.1+cu121 torchaudio==2.3.1+cu121 --index-url https://download.pytorch.org/whl/cu121
+pip install psutil==5.9.8 pandas==2.2.2 numpy==1.26.4
